# ClassesTemplates

./: CMakeLists.txt  README.md  fds.txt  main.cpp
myCalculate/: CMakeLists.txt  myCalculate.cpp  myCalculate.h
mymath/: mymath.cpp  mymath.h
